refactor(k8s): update hem chart
